# fligths-ops-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  health.py
app/core/: config.py  exceptions.py  logger.py  prompts.py
app/kafka/: consumer.py  producer.py
app/services/: agent_service.py  analysis_service.py  gemini_service.py  llm_interface.py  llm_service.py  rag_service.py  tools.py
app/skills/: loader.py  registry.py
app/tools/: builder.py  rag_tools.py  report_tools.py  skill_tools.py  task_store.py  task_tools.py  ui_tools.py
data/: hydraulic_manual.txt  incident_history.txt  mel_document.txt  service_bulletin.txt  troubleshooting_guide.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/eye/: AircraftViewer.jsx  FilmGrain.jsx  StreamlineCanvas.jsx  StreamlineShader.js  TheEye.jsx  Typewriter.jsx
frontend/src/components/widgets/: CitationWidget.jsx  WidgetDoc.jsx  WidgetOverlay.jsx
frontend/src/pages/: EyePage.jsx  IntroPage.jsx  InvestigationPage.jsx
frontend/src/store/: useRimeStore.js
java-backend/: Dockerfile  pom.xml
java-backend/src/main/java/com/flightops/backend/: BackendApplication.java
java-backend/src/main/java/com/flightops/backend/controller/: IncidentController.java
java-backend/src/main/java/com/flightops/backend/domain/: Incident.java
java-backend/src/main/java/com/flightops/backend/dto/: CreateIncidentRequest.java  IncidentResponse.java
java-backend/src/main/java/com/flightops/backend/kafka/: kafkaConsumer.java  kafkaProducer.java
java-backend/src/main/java/com/flightops/backend/repository/: IncidentRepository.java
java-backend/src/main/java/com/flightops/backend/service/: IncidentService.java
java-backend/src/main/resources/: application.yaml
java-backend/src/test/java/com/flightops/backend/: BackendApplicationTests.java
scripts/: ingest.py  test_rag.py
skills/impact-assessment/: SKILL.md
skills/incident-analysis/: SKILL.md
skills/troubleshooting/: SKILL.md
tests/: test_agent.py  test_rag.py
