[project]
name = "flight-ops-assistant"
version = "0.1.0"
description = "Production-ready AI assistant for aeronautical ground maintenance"
authors = [
    {name = "pharc1", email = "kpharci@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    # Web framework
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    # Config & validation
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    # AI — LangChain + Gemini (LLM + embeddings + agent)
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain[google-genai] (>=1.2.4,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    # Event streaming
    "kafka-python (>=2.0.0,<3.0.0)",
    # Utilities
    "python-dotenv (>=1.0.0,<2.0.0)",
    "tenacity (>=8.0.0,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
